--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,10 @@ html,body {
     height: 100%;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 * {
     font-family: 'Gilroy', sans-serif;
 }
